--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "title":"pai-blog",
     "subTitle":"Happy Happy Happy",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/99982524?s=400&u=8a0b488a5f5d8340c5eef073cf19af4e5e4417c2&v=4",
     "GMEEK_VERSION":"last"
 }
